syntax = "proto3";

package yandex.cloud.events.lockbox;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/lockbox;lockbox";
option java_package = "yandex.cloud.api.events.lockbox";
option java_outer_classname = "PayloadEvents";

message GetPayload {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message EventDetails {
    string secret_id = 1 [(required) = true];
    string secret_name = 2;
    string secret_version_id = 3 [(required) = true];
    string secret_kms_key_id = 4;
    bool secret_deletion_protection = 5;
    string secret_status = 6 [(required) = true];
    string secret_version_status = 7 [(required) = true];
    repeated string secret_version_payload_entry_keys = 8 [(required) = true];
  }

  message RequestParameters {
    string secret_id = 1 [(required) = true];
    string version_id = 2;
  }

  message Response {
    string version_id = 1 [(required) = true];
    repeated string entry_keys = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}
